--- a/app/src/main/res/layout/fragment_hier.xml
+++ b/app/src/main/res/layout/fragment_hier.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context="com.wordpress.yassinemalti.kooora.activity.TodayFragment">
+    tools:context="com.wordpress.yassinemalti.kooora.activity.HierFragment">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ScrollView01"
@@ -26,7 +26,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/activity_today_webview" />
+                    android:id="@+id/activity_hier_webview" />
 
             </LinearLayout>
 
@@ -43,10 +43,10 @@
         android:layout_gravity="bottom|center_horizontal">
 
         <com.google.android.gms.ads.NativeExpressAdView
-            android:id="@+id/adBanner_2"
+            android:id="@+id/adBanner_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            ads:adUnitId="ca-app-pub-2326345806005611/6041337285"
+            ads:adUnitId="ca-app-pub-2326345806005611/7518070481"
             ads:adSize="280x70"/>
     </LinearLayout>
 
