--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#663400</color>
-    <color name="colorPrimaryDark">#4A2500</color>
-    <color name="colorAccent">#E87400</color>
+    <color name="colorPrimary">#399601</color>
+    <color name="colorPrimaryDark">#246000</color>
+    <color name="colorAccent">#173F00</color>
 </resources>
