--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -4,7 +4,7 @@
     <item>
         <bitmap
             android:gravity="center|bottom|clip_vertical"
-            android:src="@drawable/background"
+            android:src="@drawable/stadiumbg"
             android:scaleType="centerCrop"/>
     </item>
 
