--- a/app/src/main/res/layout/fragment_actualites.xml
+++ b/app/src/main/res/layout/fragment_actualites.xml
@@ -43,10 +43,10 @@
         android:layout_gravity="bottom|center_horizontal">
 
         <com.google.android.gms.ads.NativeExpressAdView
-            android:id="@+id/adBanner_4"
+            android:id="@+id/adBanner_actualites"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            ads:adUnitId="ca-app-pub-2326345806005611/8994803682"
+            ads:adUnitId="ca-app-pub-2326345806005611/4863604489"
             ads:adSize="280x70"/>
     </LinearLayout>
 
