--- a/app/src/main/res/layout/fragment_aujourdhui.xml
+++ b/app/src/main/res/layout/fragment_aujourdhui.xml
@@ -43,10 +43,10 @@
         android:layout_gravity="bottom|center_horizontal">
 
         <com.google.android.gms.ads.NativeExpressAdView
-            android:id="@+id/adBanner_1"
+            android:id="@+id/adBanner_aujourdhui"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            ads:adUnitId="ca-app-pub-2326345806005611/2744950481"
+            ads:adUnitId="ca-app-pub-2326345806005611/6479938489"
             ads:adSize="280x70"/>
     </LinearLayout>
 
