--- a/app/src/main/res/layout/fragment_maintenant.xml
+++ b/app/src/main/res/layout/fragment_maintenant.xml
@@ -43,10 +43,10 @@
         android:layout_gravity="bottom|center_horizontal">
 
         <com.google.android.gms.ads.NativeExpressAdView
-            android:id="@+id/adBanner_0"
+            android:id="@+id/adBanner_maintenant"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            ads:adUnitId="ca-app-pub-2326345806005611/7518070481"
+            ads:adUnitId="ca-app-pub-2326345806005611/2049738886"
             ads:adSize="280x70"/>
     </LinearLayout>
 
