--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/liens"
             android:icon="@drawable/liens"
-            android:title="روابط البث" />
+            android:title="روابط اليوم" />
     </group>
 
     <group android:id="@+id/groupesecondaire" >
